--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,3 +8,5 @@
 @import '~bootstrap/scss/bootstrap';
 
 @import '~@fortawesome/fontawesome-free/css/all.min.css';
+
+@import  '~trix/dist/trix.css';
